objects/Listing__c.object
<CustomObject>
    <fields>
        <fullName>Reserved_community_minimum_age__c</fullName>
        <formula>Building__r.Reserved_community_minimum_age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reserved community minimum age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserved_community_type__c</fullName>
        <formula>TEXT( Building__r.Reserved_community_type__c )</formula>
        <label>Reserved community type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserved_community_type_description__c</fullName>
        <formula>Building__r.Reserved_community_type_description__c</formula>
        <label>Reserved community type description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SASE_Required_for_Lottery_Ticket__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>SASE Required for Lottery Ticket. Uncheck this box if no SASE is required to receive a lottery ticket/number for this listing.</inlineHelpText>
        <label>SASE Required for Lottery Ticket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Onsite__c</fullName>
        <description>&quot;Miscellaneous information about other services offered here. This will appear within the web app.&quot;</description>
        <inlineHelpText>Are there any additional services offered for this listing?</inlineHelpText>
        <label>Services Onsite</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smoking_Policy__c</fullName>
        <description>Will be set via code from Property.</description>
        <label>Smoking Policy</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pricing Request Approved</fullName>
                </value>
                <value>
                    <fullName>Marketing Plan Approved</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Applications__c</fullName>
        <description>The number of applications where the status is &quot;Submitted&quot;</description>
        <label>Submitted Applications</label>
        <summaryFilterItems>
            <field>Application__c.Status__c</field>
            <operation>equals</operation>
            <value>Submitted, Removed</value>
        </summaryFilterItems>
        <summaryForeignKey>Application__c.Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <inlineHelpText>Listings can have different status, as it relates to ownership and rental. It could be new, or it could be up again. These &quot;Tenure&quot; statuses capture those values.</inlineHelpText>
        <label>Tenure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New rental</fullName>
                </value>
                <value>
                    <fullName>Re-rental</fullName>
                </value>
                <value>
                    <fullName>New sale</fullName>
                </value>
                <value>
                    <fullName>Resale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Applications__c</fullName>
        <description>The total number of applications (regardless of status) for the listing.</description>
        <label>Total Applications</label>
        <summaryForeignKey>Application__c.Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Units_in_the_Bldg_including_BMR__c</fullName>
        <formula>Building__r.Total_Units_in_the_Bldg_including_BMR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # Units in the Bldg- including BMR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_building_units__c</fullName>
        <formula>Building__r.Number_of_total_units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total number of building units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_waitlist_openings__c</fullName>
        <formula>Maximum_waitlist_size__c - Number_of_people_currently_on_waitlist__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total waitlist openings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Available__c</fullName>
        <description>The number of Listing Units with &quot;Available&quot; status.</description>
        <label>Units Available</label>
        <summaryFilterItems>
            <field>Listing_Unit__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryForeignKey>Listing_Unit__c.Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_Built_Display__c</fullName>
        <formula>TEXT(Year_Built__c)</formula>
        <label>Year Built</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <formula>Building__r.Year_Built__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Built</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hasWaitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this building have a waitlist?</inlineHelpText>
        <label>Has waitlist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_BR_Range_for_listing__c</fullName>
        <description>Range of BR in the listing</description>
        <formula>TEXT(Min_BR__c)  &amp; &quot;-&quot; &amp; Text( Max_BR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Range of BR in the listing</inlineHelpText>
        <label># of BR Range for listing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Listing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Application_Due_Date__c</columns>
        <columns>Lottery_Date__c</columns>
        <columns>Lottery_Results_Date__c</columns>
        <columns>Submitted_Applications__c</columns>
        <columns>Flagged_Applications__c</columns>
        <columns>Removed_from_Lottery__c</columns>
        <columns>Lottery_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Listing_Details</fullName>
        <columns>NAME</columns>
        <columns>Building__c</columns>
        <columns>Building_Street_Address__c</columns>
        <columns>Status__c</columns>
        <columns>Application_Due_Date__c</columns>
        <columns>Lottery_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Leasing_Agent_Name__c</columns>
        <columns>Leasing_Agent_Street__c</columns>
        <filterScope>Everything</filterScope>
        <label>Listing Details</label>
    </listViews>
    <listViews>
        <fullName>Pseudo_Listings_for_Admin_Purposes</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Lottery_Status__c</columns>
        <columns>Building__c</columns>
        <columns>COP_App_Total__c</columns>
        <columns>DTHP_App_Total__c</columns>
        <columns>General_App_Total__c</columns>
        <columns>Live_Work_App_Total__c</columns>
        <columns>Neighborhood_App_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Due_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Pseudo Listings for Admin Purposes</label>
    </listViews>
    <nameField>
        <label>Listing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>